syntax = "proto3";

package pluginapi;

option go_package = "github.com/oriagent/ori-pluginapi";

// ToolService defines the RPC service for plugin tools
service ToolService {
    // GetDefinition returns the generic, provider-agnostic tool definition
    rpc GetDefinition(Empty) returns (ToolDefinition);

    // Call executes the tool with the given arguments
    rpc Call(CallRequest) returns (CallResponse);

    // GetVersion returns the plugin version (optional)
    rpc GetVersion(Empty) returns (VersionResponse);

    // SetAgentContext provides agent information to the plugin (optional)
    rpc SetAgentContext(AgentContextRequest) returns (Empty);

    // GetDefaultSettings returns default settings as JSON (optional)
    rpc GetDefaultSettings(Empty) returns (SettingsResponse);

    // InitializationProvider methods
    // GetRequiredConfig returns configuration variables needed for initialization
    rpc GetRequiredConfig(Empty) returns (ConfigVariablesResponse);

    // ValidateConfig validates the provided configuration
    rpc ValidateConfig(ValidateConfigRequest) returns (ConfigResponse);

    // InitializeWithConfig initializes the plugin with the provided configuration
    rpc InitializeWithConfig(InitializeConfigRequest) returns (ConfigResponse);

    // GetMetadata returns plugin metadata (optional)
    rpc GetMetadata(Empty) returns (MetadataResponse);

    // GetCompatibilityInfo returns plugin compatibility information (optional)
    rpc GetCompatibilityInfo(Empty) returns (CompatibilityInfoResponse);

    // WebPageProvider methods
    // GetWebPages returns a list of available web pages this plugin provides
    rpc GetWebPages(Empty) returns (WebPagesResponse);

    // ServeWebPage handles a web page request and returns HTML/JSON content
    rpc ServeWebPage(WebPageRequest) returns (WebPageResponse);

    // File attachment support
    // AcceptsFiles returns the list of file types this plugin accepts
    rpc AcceptsFiles(Empty) returns (AcceptsFilesResponse);

    // CallWithFiles executes the tool with arguments and file attachments
    rpc CallWithFiles(CallWithFilesRequest) returns (CallResponse);

    // GetOperations returns operation-specific parameter information
    rpc GetOperations(Empty) returns (OperationsResponse);
}

// Empty message for RPCs that don't need parameters
message Empty {}

// ToolDefinition represents a generic, provider-agnostic tool definition.
// This format works with any LLM provider (OpenAI, Claude, Ollama, etc.)
// and will be automatically translated to provider-specific formats by the server.
message ToolDefinition {
    string name = 1;
    string description = 2;
    string parameters_json = 3;  // JSON-encoded JSON Schema for parameters
}

// CallRequest contains the arguments for calling a tool
message CallRequest {
    string args_json = 1;  // JSON-encoded tool arguments
}

// CallResponse contains the result of a tool call
message CallResponse {
    string result_json = 1;  // JSON-encoded result on success
    string error = 2;        // Error message on failure (empty on success)
}

// VersionResponse contains the plugin version
message VersionResponse {
    string version = 1;
}

// AgentContextRequest provides current agent information to the plugin
message AgentContextRequest {
    string name = 1;           // Agent name (e.g., "default", "my-agent")
    string config_path = 2;    // Path to agent's config.json
    string settings_path = 3;  // Path to agent's agent_settings.json
    string agent_dir = 4;      // Path to agent's directory
}

// SettingsResponse contains plugin settings as JSON
message SettingsResponse {
    string settings_json = 1;  // JSON-encoded settings
    string error = 2;          // Error message on failure (empty on success)
}

// ProtoConfigVariable describes a single configuration variable (protobuf version)
message ProtoConfigVariable {
    string key = 1;
    string name = 2;
    string description = 3;
    string type = 4;  // "string", "int", "filepath", "dirpath", "password", etc.
    bool required = 5;
    string default_value_json = 6;  // JSON-encoded default value (optional)
    string validation = 7;          // Validation rules (optional)
    repeated string options = 8;    // List of valid options (optional)
    string placeholder = 9;         // Placeholder text (optional)
}

// ConfigVariablesResponse contains the list of required config variables
message ConfigVariablesResponse {
    repeated ProtoConfigVariable config_vars = 1;
}

// ValidateConfigRequest contains configuration to validate
message ValidateConfigRequest {
    string config_json = 1;  // JSON-encoded configuration map
}

// InitializeConfigRequest contains configuration for initialization
message InitializeConfigRequest {
    string config_json = 1;  // JSON-encoded configuration map
}

// ConfigResponse contains the result of config operations
message ConfigResponse {
    bool success = 1;
    string error = 2;  // Error message on failure (empty on success)
}

// Maintainer represents a single plugin maintainer/contributor
message Maintainer {
    string name = 1;                   // Full name
    string email = 2;                  // Contact email
    string organization = 3;           // Organization affiliation
    string website = 4;                // Personal/project website
    string role = 5;                   // "author", "maintainer", "contributor"
    bool primary = 6;                  // Is this the primary/original author?
}

// Platform represents a supported operating system and its architectures
message Platform {
    string os = 1;                     // Operating system (e.g., "darwin", "linux", "windows")
    repeated string architectures = 2; // Supported architectures (e.g., "amd64", "arm64")
}

// Requirements represents plugin dependencies and version requirements
message Requirements {
    string min_ori_version = 1;        // Minimum ori-agent version required
    repeated string dependencies = 2;  // List of required plugin names
}

// PluginMetadata contains comprehensive plugin information
message PluginMetadata {
    string name = 1;                   // Plugin name
    string version = 2;                // Plugin version (semver)
    string description = 3;            // Short description of the plugin
    string license = 4;                // e.g., "MIT", "Apache-2.0", "GPL-3.0"
    string repository = 5;             // Source code repository URL
    repeated Maintainer maintainers = 6;
    repeated Platform platforms = 7;   // Supported platforms
    Requirements requirements = 8;     // Plugin requirements
    repeated string tags = 9;          // Plugin tags (normalized, e.g., "dev-tools", "audio")
}

// MetadataResponse contains plugin metadata
message MetadataResponse {
    PluginMetadata metadata = 1;
    string error = 2;  // Error message on failure (empty on success)
}

// CompatibilityInfoResponse contains plugin compatibility information
message CompatibilityInfoResponse {
    string min_agent_version = 1;  // Minimum ori-agent version required
    string max_agent_version = 2;  // Maximum ori-agent version supported
    string api_version = 3;         // Plugin API version
}

// WebPagesResponse contains the list of available web pages
message WebPagesResponse {
    repeated string pages = 1;  // List of page paths (e.g., "marketplace", "settings")
}

// WebPageRequest contains the web page request parameters
message WebPageRequest {
    string path = 1;  // The requested path (e.g., "marketplace")
    map<string, string> query = 2;  // URL query parameters
}

// WebPageResponse contains the web page content
message WebPageResponse {
    string content = 1;  // HTML or JSON content
    string content_type = 2;  // MIME type (e.g., "text/html", "application/json")
    string error = 3;  // Error message on failure (empty on success)
}

// =============================================================================
// File Attachment Support
// =============================================================================

// ProtoFileAttachment represents a file attached to a plugin call (proto version)
// Note: Named ProtoFileAttachment to avoid conflict with pluginapi.FileAttachment
message ProtoFileAttachment {
    string name = 1;     // Original filename (e.g., "drums.wav")
    string type = 2;     // MIME type (e.g., "audio/wav", "application/zip")
    int64 size = 3;      // File size in bytes
    bytes content = 4;   // Raw file content
}

// AcceptsFilesResponse contains the list of accepted file types
message AcceptsFilesResponse {
    repeated string accepted_types = 1;  // MIME types or extensions (e.g., ".wav", "audio/wav")
    bool supports_files = 2;             // True if plugin implements FileAttachmentHandler
}

// CallWithFilesRequest contains arguments and file attachments for a tool call
message CallWithFilesRequest {
    string args_json = 1;                       // JSON-encoded tool arguments
    repeated ProtoFileAttachment files = 2;     // File attachments
}

// =============================================================================
// Operations Provider Support
// =============================================================================

// ProtoOperationInfo describes a single operation and its parameters
message ProtoOperationInfo {
    string name = 1;                           // Operation name (e.g., "create_project")
    repeated string parameters = 2;            // Parameter names for this operation
    repeated string required_parameters = 3;   // Required parameter names
}

// OperationsResponse contains the list of operations with their parameters
message OperationsResponse {
    repeated ProtoOperationInfo operations = 1;
    bool supports_operations = 2;              // True if plugin implements OperationsProvider
}
